# capacitor-plugin-libdc

./: .gitignore  CapacitorPluginLibdc.podspec  README.md  package.json  rollup.config.js  tsconfig.json
android/: build.gradle  copy_libdc_files.sh  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/include/libdivecomputer/: bluetooth.h  descriptor.h
android/src/main/cpp/libdivecomputer/: atomics_cobalt.c  bluetooth.c  checksum.c  cressi_edy_parser.c  cressi_goa.c  deepblu_cosmiq.c  deepsix_excursion.c  descriptor.c  device.c  diverite_nitekq.c  halcyon_symbios.c  hw_ostc3.c  liquivision_lynx.c  mares_iconhd.c  mares_iconhd_parser.c  oceanic_veo250.c  oceanic_vtpro.c  reefnet_sensus.c  sporasub_sp2.c  suunto_common2.h  suunto_d9.c  suunto_vyper2.c  tecdiving_divecomputereu.c  usbhid.c
android/src/main/java/org/: Parser.java
ios/: copy_libdc_files.sh
ios/Plugin/: LibDCImplementation.swift  LibDCPlugin.m  LibDCPlugin.swift
ios/Plugin/Sources/Clibdivecomputer/: module.modulemap
ios/Plugin/Sources/Clibdivecomputer/include/: module.modulemap  shim.h
ios/Plugin/Sources/Clibdivecomputer/src/: array.c  array.h  checksum.h  cressi_edy.c  cressi_goa_parser.c  divesoft_freedom.c  divesystem_idive.c  halcyon_symbios_parser.c  hw_frog.c  mclean_extreme.c  oceanic_atom2.c  parser.c  reefnet_sensuspro.c  reefnet_sensusultra.c  seac_screen.c  shearwater_petrel.c  shearwater_predator_parser.c  suunto_common2.c  uwatec_smart.c
ios/Plugin/Sources/LibDCBridge/include/: BLEBridge.h  CoreBluetoothManagerProtocol.h  configuredc.h  module.modulemap
ios/Plugin/Sources/LibDCBridge/src/: BLEBridge.m  configuredc.c
ios/Plugin/Sources/LibDCSwift/: BLEManager.swift  DiveLogRetriever.swift  LibDCSwift.swift  Logger.swift
ios/Plugin/Sources/LibDCSwift/Models/: DeviceConfiguration.swift  DeviceFingerprint.swift  DiveData.swift  SampleData.swift  StoredDevice.swift
ios/Plugin/Sources/LibDCSwift/Parser/: GenericParser.swift
ios/Plugin/Sources/LibDCSwift/ViewModels/: DiveDataViewModel.swift
src/: definitions.ts  index.ts  web.ts
(+4 files in other folders)
